fix modal spacing and container queries for amenities

--- a/room-card/mondrian.css
+++ b/room-card/mondrian.css
@@ -50,5 +50,7 @@
 
         --room-modal-cta-header-display: none;
         --room-modal-cta-normal-display: block;
+
+        --room-modal-spacing-top-bottom : 0px;
     }
 }
